--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1570,7 +1570,7 @@ color: #FFFFFF;
         position: absolute;
         width: 305px;
         height: 176px;
-        right: 640px;
+        left: 285px;
         top: 223px;
         display: flex;
         align-items: center;
@@ -1592,7 +1592,7 @@ color: #FFFFFF;
     position: absolute;
     width: 564px;
     height: 64px;   
-    right: 318px;
+    left: 344px;
     top: 740px;
     display: flex;
     padding-top: 20px;
